@@ -1,3 +1,9 @@
+2004-04-26  John Luke  <jluke@cfl.rr.com>
+
+	* *.cs: ILAsmBinding namespace
+
+
+
 
 	import from SD svn
 	not yet working and untested
